# SistemasComplejos

./: .gitignore  LICENSE  name_counts.json  name_counts_example.json  pyproject.toml  related_names.json  related_names_example.json
Agents/: boids_class.py  chatgpt_simulation.py
Cellular_automata/: CA.py  cellular_automata_1d.py  game_of_life.py
Graphs/: book_novel_graph.py  example_text.txt  extract_characters_information.py  graph_properties.json  name_counts.json  networkx_tutorial.py  related_names.json  the_name_of_the_wind.txt
Logistic_map/: mapeo_logistico.py
Lorenz_attractor/: lorenz_attractor.py
Mandelbrot_set/: mandelbrot.py
Tareas/: mandelbrot.py  mapeo_logistico.py
