[tool.poetry]
name = "sistemascomplejos"
version = "0.1.0"
description = "Ambiente virtual para la clase de sistemas complejos"
authors = ["Alfonso Toriz V. <60415206+Athansya@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
seaborn = "^0.12.2"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
